# MonteLauro-ML-CD32-PPC

./: .build.yml  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
boards/: README.md
boards/cdg2/: Makefile  board.h  console.c  input.c
boards/ml-gd2/: Makefile  cdrom.c  console.c  kernel_cpu.c
boards/montelauro-cd32/: Makefile  board.h  cdrom.c  console.c  input.c  kernel_cpu.c
docker/: Dockerfile  entrypoint.sh
docs/aros/: abi.md
docs/hardware/: bios_dump_notes.md  boot_sequence.md  memory_map.md
include/: cd32.h  cd32_gfx.h  cd32_pad.h  cd32_platform.h
kernel/: Makefile  audio.c  cdrom.c  demo.elf  dma.c  gfx.c  input.c  kernel.c  linker.ld  pad.c  string.c  video.c
kernel/demo/: cube.c  cube.elf  demo.c  gfx_demo.c  gfx_demo.elf  poly.c  poly.elf  tech_demo.c
rom/: jogo.iso
sdk/: api.md
src/: bus.rs  cd32_abi.rs  cdrom.rs  disasm.rs  dma.rs  hardware.rs  interrupt.rs  lib.rs  main.rs  memory.rs  save.rs  sdl_debug.rs
src/audio/: dsp.rs  mod.rs
src/cpu/: coldfire.rs  mod.rs  ppc603e.rs
src/gpu/: mod.rs  tbdr.rs
tools/: build-aros.sh  check_abi_conformance.rs  gen_headers.rs  mkcd.sh  setup-aros.sh
